--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>차나니의 책방</title>
+
+    <!-- SEO -->
+    <meta name="description" content="차나니의 책방 - 개발 서적 독서 기록과 정리" />
+    <meta name="author" content="이찬한" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="차나니의 책방" />
+    <meta property="og:description" content="개발 서적 독서 기록과 정리" />
+    <meta property="og:site_name" content="차나니의 책방" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="차나니의 책방" />
+    <meta name="twitter:description" content="개발 서적 독서 기록과 정리" />
   </head>
   <body>
     <div id="root"></div>
