chore : 메타태그 이미지 절대 경로로 수정

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="차나니의 책방" />
     <meta property="og:description" content="개발 서적 독서 기록과 정리" />
-    <meta property="og:image" content="/profile.png" />
+    <meta property="og:image" content="https://chanani-books.vercel.app/profile.png" />
     <meta property="og:site_name" content="차나니의 책방" />
     <meta property="og:locale" content="ko_KR" />
 
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="차나니의 책방" />
     <meta name="twitter:description" content="개발 서적 독서 기록과 정리" />
-    <meta name="twitter:image" content="/profile.png" />
+    <meta name="twitter:image" content="https://chanani-books.vercel.app/profile.png" />
   </head>
   <body>
     <div id="root"></div>
