chore : 메타태그 이미지 옵션 수정

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chanani-books.vercel.app" />
     <meta property="og:title" content="차나니의 책방" />
     <meta property="og:description" content="개발 서적 독서 기록과 정리" />
     <meta property="og:image" content="https://chanani-books.vercel.app/profile.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
     <meta property="og:site_name" content="차나니의 책방" />
     <meta property="og:locale" content="ko_KR" />
 
