feat : 도서 블로그에 기술 블로그 통합 작업 진행 중

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta name="theme-color" content="#4f46e5" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="차나니의 책방" />
-    <title>차나니의 책방</title>
+    <meta name="apple-mobile-web-app-title" content="차나니의 블로그" />
+    <title>차나니의 블로그</title>
 
     <!-- SEO -->
-    <meta name="description" content="차나니의 책방 - 개발 서적 독서 기록과 정리. 클린코드, 오브젝트, 리팩터링 등 개발 서적을 읽고 챕터별로 정리합니다." />
+    <meta name="description" content="차나니의 블로그 - 개발 기술 블로그 & 독서 기록. Java, Spring, DevOps 등 개발 기술과 서적 독서 기록을 정리합니다." />
     <meta name="author" content="이찬한" />
-    <meta name="keywords" content="차나니의 책방, 개발 서적, 독서 기록, 프로그래밍 책, 클린코드, 리팩터링, 개발자 독서" />
+    <meta name="keywords" content="차나니의 블로그, 개발 블로그, 기술 블로그, Java, Spring, DevOps, 개발 서적, 독서 기록" />
     <link rel="canonical" href="https://chanani-books.vercel.app/" />
 
     <!-- Structured Data -->
@@ -28,10 +28,10 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "차나니의 책방",
-      "alternateName": "chanani books",
+      "name": "차나니의 블로그",
+      "alternateName": "chanani blog",
       "url": "https://chanani-books.vercel.app",
-      "description": "개발 서적 독서 기록과 정리. 클린코드, 오브젝트, 리팩터링 등 개발 서적을 읽고 챕터별로 정리합니다.",
+      "description": "개발 기술 블로그 & 독서 기록. Java, Spring, DevOps 등 개발 기술과 서적 독서 기록을 정리합니다.",
       "author": {
         "@type": "Person",
         "name": "이찬한",
@@ -44,26 +44,26 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chanani-books.vercel.app" />
-    <meta property="og:title" content="차나니의 책방" />
-    <meta property="og:description" content="개발 서적 독서 기록과 정리. 클린코드, 오브젝트, 리팩터링 등 개발 서적을 읽고 챕터별로 정리합니다." />
+    <meta property="og:title" content="차나니의 블로그" />
+    <meta property="og:description" content="개발 기술 블로그 & 독서 기록. Java, Spring, DevOps 등 개발 기술과 서적 독서 기록을 정리합니다." />
     <meta property="og:image" content="https://chanani-books.vercel.app/profile.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
-    <meta property="og:site_name" content="차나니의 책방" />
+    <meta property="og:site_name" content="차나니의 블로그" />
     <meta property="og:locale" content="ko_KR" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="차나니의 책방" />
-    <meta name="twitter:description" content="개발 서적 독서 기록과 정리. 클린코드, 오브젝트, 리팩터링 등 개발 서적을 읽고 챕터별로 정리합니다." />
+    <meta name="twitter:title" content="차나니의 블로그" />
+    <meta name="twitter:description" content="개발 기술 블로그 & 독서 기록. Java, Spring, DevOps 등 개발 기술과 서적 독서 기록을 정리합니다." />
     <meta name="twitter:image" content="https://chanani-books.vercel.app/profile.png" />
   </head>
   <body>
     <div id="root"></div>
     <noscript>
-      <h1>차나니의 책방</h1>
-      <p>개발 서적 독서 기록과 정리 - 클린코드, 오브젝트, 리팩터링 등 개발 서적을 읽고 챕터별로 정리합니다.</p>
+      <h1>차나니의 블로그</h1>
+      <p>개발 기술 블로그 & 독서 기록 - Java, Spring, DevOps 등 개발 기술과 서적 독서 기록을 정리합니다.</p>
       <p>이 사이트는 JavaScript가 필요합니다.</p>
     </noscript>
     <script type="module" src="/src/main.jsx"></script>
