--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       <p>이 사이트는 JavaScript가 필요합니다.</p>
     </noscript>
     <script type="module" src="/src/main.jsx"></script>
-    <script data-goatcounter="https://chanani.goatcounter.com/count"
-            async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="/gc/count"
+            data-goatcounter-settings='{"allow_local": true}'
+            async src="/count.js"></script>
   </body>
 </html>
